--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npx tailwindcss -i ./input.css -o ./public/css/style.css && NODE_ENV=production node server.js",
+    "start": "node server.js",
     "seed": "node seeds/seed.js",
     "watch": "nodemon server",
     "build-css": "npx tailwindcss -i ./input.css -o ./public/css/style.css",
